--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -117,7 +117,7 @@ a, b = 5, 10
 print('{0} * {1} = {2}'.format(a, b, a * b))
 ```
 
-Python 3.6以后，格式化字符串还有更为简洁的书写方式，就是在字符串前加上字母`f`，我们可以使用下面的语法糖来简化上面的代码。
+Python 3.6以后，格式化字符串还有更为简洁的书写方式，就是在字符串前加上字母`f`，我们可以使用下面的语法来简化上面的代码。
 
 ```Python
 a, b = 5, 10
